--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
     }
-
-}
-
-plugins {
-    id "com.github.sherter.google-java-format" version "0.8"
 }
 
 allprojects {
@@ -20,32 +15,6 @@ allprojects {
     }
 }
 
-subprojects { project ->
-    project.tasks.withType(JavaCompile) {
-        dependsOn(installGitHooks)
-    }
-
-    repositories {
-        jcenter()
-        google()
-    }
-
-}
-
-googleJavaFormat {
-    toolVersion = "1.7"
-}
-
-////////////////////////////////////////////////////////////////////////
-//
-//  Google Java Format pre-commit hook installation
-////////////////////////////////////////////////////////////////////////
-
-
-tasks.register('installGitHooks', Copy) {
-    from(file('config/hooks/pre-commit-stub')) {
-        rename 'pre-commit-stub', 'pre-commit'
-    }
-    into file('.git/hooks')
-    fileMode 0777
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
